--- a/openmp/Makefile
+++ b/openmp/Makefile
@@ -1,3 +1,3 @@
 LDFLAGS = -fopenmp
-main: main.c 
-	gcc -o main main.c $(LDFLAGS) 
+main: main.c  
+	OMP_NUM_THREADS=4 gcc -o main main.c $(LDFLAGS) 
